--- a/index.html
+++ b/index.html
@@ -1,109 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  
   <title>Easybank landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+ 
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <header>
+    <div class="container">
+      <nav>
+        <!-- logo -->
+        <img src="./images/logo.svg" alt="" class="logo">
+        <!-- Icons -->
+        <input type="checkbox" class="check" id="toggle">
+        <label for="toggle" class="hamburger" id="hamburger">
+          <img src="./images/icon-hamburger.svg" alt="">
+        </label>
 
-  Request Invite
+        <ul class="nav-ul" id="nav-ul">
+          <li class="nav-link"><a href="#">Home</a></li>
+          <li class="nav-link"><a href="#about-section">About</a></li>
+          <li class="nav-link"><a href="#">Contact</a></li>
+          <li class="nav-link"><a href="#">Blog</a></li>
+          <li class="nav-link"><a href="#">Careers</a></li>
+        </ul>
 
+        <a href="#" class="btn">Request Invite</a>
 
-  Next generation digital banking
+      </nav>
+    </div>
+  </header>
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop
+  <!-- Welcome section -->
+  <section class="welcome-section">
+    <div class="container welcome">
+      <div class="welcome-text">
+        <h1 class="u mb-small">
+          Next generation <span>digital banking</span>
+        </h1>
+        <p class="u-mb-large">
+          Take your financial life online. Your Easybank account will be a one-stop-shop 
   for spending, saving, budgeting, investing, and much more.
+        </p>
+        <a href="#" class="btn">Request Invite</a>
+      </div>
+      <div class="welcome-image">
+        <img src="./images/image-mockups.png" alt="">
+      </div>
+    </div>
+  </section>
 
-  Request Invite
+  <!-- ABOUT SECTION -->
+  <section class="about-section" id="about-section">
+    <div class="container about">
+      <div class="about-text">
+        <h2 class="u-mb-small heading-secondary">
+          Why choose Easybank?
+        </h2>
+        <p class="u-mb-large">
+          We leverage Open Banking to turn your bank account into your financial hub. Control 
+          your finances like never before.
+        </p>
+      </div>
 
+      <div class="about-item">
+        <div class="about-item-box">
+          <img src="./images/icon-online.svg" alt="" class="u-mb-small">
+          <h3 class="heading-tertiary u-mb-small">
+            Online Banking
+          </h3>
+          <p>  Our modern web and mobile applications allow you to keep track of your finances 
+            wherever you are in the world.</p>
+        </div>
 
+        <div class="about-item-box">
+          <img src="./images/icon-budgeting.svg" alt="" class="u-mb-small">
+          <h3 class="heading-tertiary u-mb-small">
+            Simple Budgeting
+          </h3>
+          <p>See exactly where your money goes each month. Receive notifications when you’re 
+            close to hitting your limits.</p>
+        </div>
 
-  Why choose Easybank?
+        <div class="about-item-box">
+          <img src="./images/icon-onboarding.svg" alt="" class="u-mb-small">
+          <h3 class="heading-tertiary u-mb-small">
+            Fast Onboarding
+          </h3>
+          <p>We don’t do branches. Open your account in minutes online and start taking control 
+            of your finances right away.</p>
+        </div>
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control
-  your finances like never before.
+      </div>
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances
-  wherever you are in the world.
+    </div>
+  </section>
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re
-  close to hitting your limits.
+  <!-- ARTICLE SECTION -->
+  <section class="article-section">
+    <div class="container">
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control
-  of your finances right away.
+      <div class="about-text">
+        <h2 class="u-mb-small heading-secondary">
+          Latest Articles
+        </h2>
+        <p class="u-mb-large">
+          Get the latest new and updates on financial issues from out blog.
+        </p>
+      </div>
 
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking
-  your money has never been easier.
+      <div class="article">
 
-
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be
+        <div class="article-box">
+          <img src="./images/image-currency.jpg" alt="" class="u-mb-small">
+          <div class="article-content">
+            <p class="article-author u-mb-small">
+              By Claire Robinson
+            </p>
+            <h4 class="article-heading u-mb-small">
+              Receive money in any currency with no fees
+            </h4>
+            <p class="article-excerpt">
+              The world is getting smaller and we’re becoming more mobile. So why should you be 
   forced to only receive money in a single …
+            </p>
+          </div>
+        </div>
 
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set
+        <div class="article-box">
+          <img src="./images/image-restaurant.jpg" alt="" class="u-mb-small">
+          <div class="article-content">
+            <p class="article-author u-mb-small">
+              By Wilson Hutton
+            </p>
+            <h4 class="article-heading u-mb-small">
+              Treat yourself without worrying about money
+            </h4>
+            <p class="article-excerpt">
+              Our simple budgeting feature allows you to separate out your spending and set 
   realistic limits each month. That means you …
+            </p>
+          </div>
+        </div>
 
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-  while you’re abroad. We’ll even show you …
+        <div class="article-box">
+          <img src="./images/image-plane.jpg" alt="" class="u-mb-small">
+          <div class="article-content">
+            <p class="article-author u-mb-small">
+              By Wilson Hutton
+            </p>
+            <h4 class="article-heading u-mb-small">
+              Take your Easybank card wherever you go
+            </h4>
+            <p class="article-excerpt">
+              We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+              while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </div>
 
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+        <div class="article-box">
+          <img src="./images/image-confetti.jpg" alt="" class="u-mb-small">
+          <div class="article-content">
+            <p class="article-author u-mb-small">
+              By Claire Robinson
+            </p>
+            <h4 class="article-heading u-mb-small">
+              Our invite-only Beta accounts are now live!
+            </h4>
+            <p class="article-excerpt">
+              After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
   It’s easy to request an invite through the site ...
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
 
 
+  <footer>
+    <div class="container">
+      <div class="footer">
 
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
+        <div class="footer-icons">
+          <div class="footer-logo u-mb-large">
+            <img src="./images/logo.svg" alt="">
+          </div>
 
-  Request Invite
+          <a href="#">
+            <img src="./images/icon-facebook.svg" alt="">
+          </a>
+          <a href="#">
+            <img src="./images/icon-youtube.svg" alt="">
+          </a>
+          <a href="#">
+              <img src="./images/icon-twitter.svg" alt="">
+          </a>
+          <a href="#">
+              <img src="./images/icon-pinterest.svg" alt="">
+          </a>
+          <a href="#">
+              <img src="./images/icon-instagram.svg" alt="">
+          </a>
 
-  © Easybank. All Rights Reserved
+        </div>
 
-  <div class="attribution">
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-credit">
+          <div class="u-mb-large">
+            <a href="#" class="btn">Request Invite</a>
+          </div>
+          <div class="footer-text">
+            <p>© Easybank. All Rights Reserved</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
 </body>
-
 </html>
